--- a/templates/home.html
+++ b/templates/home.html
@@ -110,8 +110,8 @@ align-items: center;
 
   letter-spacing:  clamp(-1.75px, -0.25vw, -3.5px);
   position: relative;
-  overflow: hidden;
-  background: #000000;
+ overflow: hidden;
+ background: black;
   margin: 0;
 }
 
