--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,274 +1,272 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <style>
-        body{
-            background-color: black;
-            display: grid;
-            place-content: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-        .content {
-  width: 330px;
-  padding: 40px 30px;
-  background:#ece5f0;
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px; 
-  display: flex;
-  flex-direction: column;  
-  justify-content: center; 
-  align-items: center;      
+{% extends "registration/rain.html" %}
+{% block content %}
+<style>
+
+    body{
+        background-color: black;
+        display: grid;
+        place-content: center;
+        height: 100vh;
+        overflow: hidden;
+    }
+    
+    .content {
+width: 330px;
+padding: 0 30px;
+background:transparent;
+border: 2px solid white;
+border-left: none;
+border-bottom-right-radius: 10px;
+border-top-right-radius: 10px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+height: 81vh;
+
 }
 
 .content .text {
-  font-size: 33px;
-  font-weight: 600;
-  margin-bottom: 35px;
-  color: #595959;
-  text-align: center;
+font-size: 33px;
+font-weight: 600;
+margin-bottom: 35px;
+color: white;
+text-align: center;
 }
 
 .field {
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-  display: flex;
-  position: relative;
+height: 50px;
+width: 100%;
+margin-top: 20px;
+display: flex;
+position: relative;
 }
 
 .field:nth-child(2) {
-  margin-top: 20px;
+margin-top: 20px;
 }
 
 .field .input {
-  height: 100%;
-  width: 100%;
-  padding-left: 45px;
-  outline: none;
-  border: none;
-  font-size: 18px;
-  background: #eee3dc;
-  color: #595959;
-  border-radius: 25px;
-  box-shadow: inset 2px 2px 5px #BABECC,
-              inset -5px -5px 10px #ffffff73;
+height: 100%;
+width: 100%;
+padding-left: 45px;
+outline: none;
+border: none;
+font-size: 18px;
+background: transparent;
+color: white;
+border-radius: 25px;
+border: 2px solid white;
 }
 
 .field .input:focus {
-  box-shadow: inset 1px 1px 2px #BABECC,
-              inset -1px -1px 2px #ffffff73;
+box-shadow: inset 1px 1px 2px #BABECC,
+inset -1px -1px 2px #ffffff73;
 }
 
 .field .span {
-  position: absolute;
-  color: #595959;
-  width: 50px;
-  line-height: 55px;
+position: absolute;
+color: #595959;
+width: 50px;
+line-height: 55px;
 }
 
 .field .label {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 45px;
-  pointer-events: none;
-  color: #666666;
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+left: 45px;
+pointer-events: none;
+color: #666666;
 }
 
 .field .input:valid ~ label {
-  opacity: 0;
+opacity: 0;
 }
 
 .forgot-pass {
-  text-align: left;
-  margin: 10px 0 10px 5px;
+text-align: left;
+margin: 10px 0 10px 5px;
 }
 
 .forgot-pass a {
-  font-size: 16px;
-  color: #666666;
-  text-decoration: none;
+font-size: 16px;
+color: #666666;
+text-decoration: none;
 }
 
 .forgot-pass:hover a {
-  text-decoration: underline;
+text-decoration: underline;
 }
 
 .button {
-  margin: 15px 0;
-  width: 100%;
-  height: 50px;
-  font-size: 18px;
-  line-height: 50px;
-  font-weight: 600;
-  background: #eee3dc;
-  border-radius: 25px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  color: #595959;
-  box-shadow: 2px 2px 5px #BABECC,
-             -5px -5px 10px #ffffff73;
+margin: 15px 0;
+width: 100%;
+height: 50px;
+font-size: 18px;
+line-height: 50px;
+font-weight: 600;
+background: transparent;
+border-radius: 25px;
+border: 2px solid white;
+outline: none;
+cursor: pointer;
+color: white;
 }
 
 .button:focus {
-  color: #3498db;
-  box-shadow: inset 2px 2px 5px #BABECC,
-             inset -5px -5px 10px #ffffff73;
+color: #3498db;
+box-shadow: inset 2px 2px 5px #BABECC,
+inset -5px -5px 10px #ffffff73;
 }
 
 .sign-up {
-  margin: 10px 0;
-  color: #595959;
-  font-size: 16px;
+margin: 10px 0;
+color:white;
+font-size: 16px;
 }
 
 .sign-up a {
-  color: #3498db;
-  text-decoration: none;
+color: #3498db;
+text-decoration: none;
 }
 
 .sign-up a:hover {
-  text-decoration: 
-  underline;
+text-decoration:
+underline;
 }
 video{
-    height: 81vh;
-    width: 50vh;
-    object-fit: cover;
-    
-    border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px; 
+height: 81vh;
+width: 50vh;
+object-fit: cover;
+filter:grayscale(1) ;
+border-bottom-left-radius: 10px;
+border-top-left-radius: 10px;
+border: 2px solid white;
+border-right: none;
 }
 .container{
-    display: flex;
-    
+width: 100%;
+height: 100%;
+display: flex;
+position: relative;
+z-index: 3;
+justify-content: center;
+align-items: center;
+
 }
 
-
-
-
-/*toast*/
+/toast/
 .toast {
-  top: 20px;
-  right:-1000px;
-  transition: right .5s ease-in ;
-  background-color: #eee3dc;
-  color: #595959;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
+top: 20px;
+right:-1000px;
+transition: right .5s ease-in ;
+background-color: #eee3dc;
+color: #595959;
+padding: 10px;
+border-radius: 5px;
+box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+display: flex;
+align-items: center;
+justify-content: space-between;
+position: absolute;
 }
 
 .toast-icon svg {
-  width: 50px;
-  height: 20px;
-  fill: #595959;
-  
+width: 50px;
+height: 20px;
+fill: #595959;
+
 }
 
 .toast-content {
-  font-family: Arial, sans-serif;
-  font-size: 18px;
+font-family: Arial, sans-serif;
+font-size: 18px;
 }
 
-    </style>
-</head>
-<body>
-    <div class="container">
-        <video src="https://cdn.dribbble.com/uploads/48292/original/30fd1f7b63806eff4db0d4276eb1ac45.mp4?1689187515 " autoplay muted loop></video> 
-    <div class="content">
-        <div class="text">
-           Register
-        </div>
-        <form action="/register/" method="post" autocomplete="off">
-            {% csrf_token %}
-            <div class="field">
-                <input required  type="text"  placeholder="Username" class="input user_name" name="f_name">
-                <span class="span"><svg class="" xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" y="0" x="0" height="20" width="50" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg"><g><path class="" data-original="#000000" fill="#595959" d="M256 0c-74.439 0-135 60.561-135 135s60.561 135 135 135 135-60.561 135-135S330.439 0 256 0zM423.966 358.195C387.006 320.667 338.009 300 286 300h-60c-52.008 0-101.006 20.667-137.966 58.195C51.255 395.539 31 444.833 31 497c0 8.284 6.716 15 15 15h420c8.284 0 15-6.716 15-15 0-52.167-20.255-101.461-57.034-138.805z"></path></g></svg></span>
-                
-             </div>
-             <div class="field">
-                <input required="" type="email"   class="input email" placeholder="Email" name="mail">
-                <span class="span"><svg xmlns="http://www.w3.org/2000/svg"  height="20" width="50" fill="#595959" viewBox="0 0 24 24" stroke="#595959"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"></path></g></svg></span>
-                
-             </div>
-           <div class="field">
-              <input required="" type="password" class="input pass_word"  placeholder="Password" name="pass">
-              <span class="span"><svg class="" xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" y="0" x="0" height="20" width="50" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg"><g><path class="" data-original="#000000" fill="#595959" d="M336 192h-16v-64C320 57.406 262.594 0 192 0S64 57.406 64 128v64H48c-26.453 0-48 21.523-48 48v224c0 26.477 21.547 48 48 48h288c26.453 0 48-21.523 48-48V240c0-26.477-21.547-48-48-48zm-229.332-64c0-47.063 38.27-85.332 85.332-85.332s85.332 38.27 85.332 85.332v64H106.668zm0 0"></path></g></svg></span>
-              
-           </div>
-           <button  type="button"  class="button" name="bb">Register</button>
-           <div class="sign-up">
-              Already a member?
-              <a href="/login/">Login</a>
-           </div>
-        </form>
-     </div>
+</style>
+
+<div class="container">
+    <video src="https://cdn.dribbble.com/uploads/48292/original/30fd1f7b63806eff4db0d4276eb1ac45.mp4?1689187515 " autoplay muted loop></video> 
+<div class="content">
+    <div class="text">
+       Register
     </div>
+    <form action="/register/" method="post" autocomplete="off">
+        {% csrf_token %}
+        <div class="field">
+            <input required  type="text"  placeholder="Username" class="input user_name" name="f_name">
+            <span class="span"><svg class="" xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" y="0" x="0" height="20" width="50" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg"><g><path class="" data-original="#000000" fill="#595959" d="M256 0c-74.439 0-135 60.561-135 135s60.561 135 135 135 135-60.561 135-135S330.439 0 256 0zM423.966 358.195C387.006 320.667 338.009 300 286 300h-60c-52.008 0-101.006 20.667-137.966 58.195C51.255 395.539 31 444.833 31 497c0 8.284 6.716 15 15 15h420c8.284 0 15-6.716 15-15 0-52.167-20.255-101.461-57.034-138.805z"></path></g></svg></span>
+            
+         </div>
+         <div class="field">
+            <input required="" type="email"   class="input email" placeholder="Email" name="mail">
+            <span class="span"><svg xmlns="http://www.w3.org/2000/svg"  height="20" width="50" fill="#595959" viewBox="0 0 24 24" stroke="#595959"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"></path></g></svg></span>
+            
+         </div>
+       <div class="field">
+          <input required="" type="password" class="input pass_word"  placeholder="Password" name="pass">
+          <span class="span"><svg class="" xml:space="preserve" style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" y="0" x="0" height="20" width="50" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg"><g><path class="" data-original="#000000" fill="#595959" d="M336 192h-16v-64C320 57.406 262.594 0 192 0S64 57.406 64 128v64H48c-26.453 0-48 21.523-48 48v224c0 26.477 21.547 48 48 48h288c26.453 0 48-21.523 48-48V240c0-26.477-21.547-48-48-48zm-229.332-64c0-47.063 38.27-85.332 85.332-85.332s85.332 38.27 85.332 85.332v64H106.668zm0 0"></path></g></svg></span>
+          
+       </div>
+       <button  type="button"  class="button" name="bb">Register</button>
+       <div class="sign-up">
+          Already a member?
+          <a href="/login/">Login</a>
+       </div>
+    </form>
+ </div>
+</div>
+
+<div class="toast">
+ <div class="toast-content">
+
+ </div>
+ <div class="toast-icon">
+    <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill-rule="evenodd" d="M10 0C4.486 0 0 4.486 0 10s4.486 10 10 10 10-4.486 10-10S15.514 0 10 0zM9 6a1 1 0 112 0v4a1 1 0 11-2 0V6zm1 9a1 1 0 100-2 1 1 0 000 2z" fill="#595959"></path></g></svg>     </div>
+</div>
+
+
+<script>
+    const showToast=(message)=>{
+        document.querySelector(".toast-content").innerText=message
+            document.querySelector(".toast").style.right="20px"
+    
    
-    <div class="toast">
-     <div class="toast-content">
+        setTimeout(() => {
+            document.querySelector(".toast").style.right="-1000px"
 
-     </div>
-     <div class="toast-icon">
-        <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill-rule="evenodd" d="M10 0C4.486 0 0 4.486 0 10s4.486 10 10 10 10-4.486 10-10S15.514 0 10 0zM9 6a1 1 0 112 0v4a1 1 0 11-2 0V6zm1 9a1 1 0 100-2 1 1 0 000 2z" fill="#595959"></path></g></svg>     </div>
-    </div>
-   
+        }, 3000);
 
-    <script>
-        const showToast=(message)=>{
-            document.querySelector(".toast-content").innerText=message
-                document.querySelector(".toast").style.right="20px"
-        
-       
-            setTimeout(() => {
-                document.querySelector(".toast").style.right="-1000px"
+    }
+    //back
+    const error="{{ error }}"
+    console.log(error)
+    if (error){
+        showToast(error)
+    }
+</script>
+  
+<script>
+    //front
+    document.querySelector(".button").addEventListener("click",()=>{
+        const email=document.querySelector(".email").value
+        const userName=document.querySelector(".user_name").value
+        const passWord=document.querySelector(".pass_word").value
+        const emailRegex = /^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$/;
 
-            }, 3000);
-
+        if(userName.length<3 || userName.length>25){
+            showToast("Usernames must be between 3 and 25 characters.")
         }
-        //back
-        const error="{{ error }}"
-        console.log(error)
-        if (error){
-            showToast(error)
+
+        else if (!emailRegex.test(email)){
+            showToast("Incorrect email")
         }
-    </script>
-      
-    <script>
-        //front
-        document.querySelector(".button").addEventListener("click",()=>{
-            const email=document.querySelector(".email").value
-            const userName=document.querySelector(".user_name").value
-            const passWord=document.querySelector(".pass_word").value
-            const emailRegex = /^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$/;
-
-            if(userName.length<3 || userName.length>25){
-                showToast("Usernames must be between 3 and 25 characters.")
-            }
-
-            else if (!emailRegex.test(email)){
-                showToast("Incorrect email")
-            }
-            else if (passWord.length<8){
-                showToast("Passwords must be at least 8 characters long.")
-            }
-            else{
-                document.querySelector("form").submit()
-            }
-        })
-    </script> 
-      
-</body>
-
-</html>
+        else if (passWord.length<8){
+            showToast("Passwords must be at least 8 characters long.")
+        }
+        else{
+            document.querySelector("form").submit()
+        }
+    })
+</script> 
